RESOLVED FIXED132422
[EFL] There are many warnings with software backend
https://bugs.webkit.org/show_bug.cgi?id=132422
Summary [EFL] There are many warnings with software backend
Ryuan Choi
Reported 2014-05-01 00:26:11 PDT
There are many warnings like below while moving mouse with software backend. CRI<21642>:ecore_evas lib/ecore_evas/ecore_evas.c:175 _ecore_evas_interface_get() Ecore_Evas 0x1420480 (engine: software_x11) does not have interface 'gl_x11' ERR<21642>: lib/ecore_evas/ecore_evas.c:3609 ecore_evas_gl_x11_window_get() safety check failed: iface == NULL
Attachments
Patch (8.98 KB, patch)
2014-05-01 00:39 PDT, Ryuan Choi
no flags
Ryuan Choi
Comment 1 2014-05-01 00:39:50 PDT
Gyuyoung Kim
Comment 2 2014-05-01 00:56:50 PDT
Comment on attachment 230569 [details] Patch LGTM. r=me.
WebKit Commit Bot
Comment 3 2014-05-01 05:43:00 PDT
Comment on attachment 230569 [details] Patch Clearing flags on attachment: 230569 Committed r168094: <http://trac.webkit.org/changeset/168094>
WebKit Commit Bot
Comment 4 2014-05-01 05:43:06 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.