[EFL] There are many warnings with software backend https://bugs.webkit.org/show_bug.cgi?id=132422

Reviewed by Gyuyoung Kim.

Source/WebCore:
ecore_evas_gl_x11_window_get should be called when only engine is opengl_x11.

This patch refactors not to call unnecessary API by checking engine type.
In addition, removed unnecessary isUsingEcoreX().

* platform/efl/EflScreenUtilities.cpp:
(WebCore::applyFallbackCursor):
(WebCore::getEcoreXWindow):
(WebCore::isUsingEcoreX): Deleted.
* platform/efl/EflScreenUtilities.h:

Source/WebKit/efl:
* ewk/ewk_view.cpp:
(_ewk_view_priv_new):
(ewk_view_cursor_set):

Source/WebKit2:
* UIProcess/API/efl/EwkView.cpp:
(EwkView::updateCursor):
(EwkView::transformToScreen):

Source/WTF:
* wtf/efl/EflTypedefs.h: Added Ecore_X_Window typedef


Canonical link: https://commits.webkit.org/150456@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@168094 268f45cc-cd09-0410-ab3c-d52691b4dbfc