Source/WebKit/efl/ewk/ewk_view.cpp
@@ -341,9 +341,6 @@ struct _Ewk_View_Private_Data {
 #if ENABLE(INSPECTOR)
     Evas_Object* inspectorView;
 #endif
-#ifdef HAVE_ECORE_X
-    bool isUsingEcoreX;
-#endif
 #if ENABLE(CONTEXT_MENUS)
     Ewk_Context_Menu* contextMenu;
 #endif
@@ -753,10 +750,6 @@ static Ewk_View_Private_Data* _ewk_view_priv_new(Ewk_View_Smart_Data* smartData)
     priv->settings.allowFileAccessFromFileURLs = pageSettings.allowFileAccessFromFileURLs();
 
     priv->history = ewk_history_new(static_cast<WebCore::BackForwardList*>(priv->page->backForward().client()));
-
-#ifdef HAVE_ECORE_X
-    priv->isUsingEcoreX = WebCore::isUsingEcoreX(smartData->base.evas);
-#endif
 
 #if ENABLE(CONTEXT_MENUS)
     priv->contextMenu = 0;
@@ -4183,8 +4176,7 @@ void ewk_view_cursor_set(Evas_Object* ewkView, const WebCore::Cursor& cursor)
 
         ecore_evas_object_cursor_set(ecoreEvas, 0, 0, 0, 0);
 #ifdef HAVE_ECORE_X
-        if (priv->isUsingEcoreX)
-            WebCore::applyFallbackCursor(ecoreEvas, group);
+        WebCore::applyFallbackCursor(ecoreEvas, group);
 #endif
     } else {
         Evas_Coord width, height;
